--- a/react/12.React源码学习-beginWork.md
+++ b/react/12.React源码学习-beginWork.md
@@ -137,7 +137,29 @@ current === null只会出现在第一次渲染的时候，因为会先创建work
 
 最后调用finishClassComponent
 
+#### 3.IndeterminateComponent
+
+FunctionalComponent在含有render方法时会被当做ClassComponent来处理
+
+```
+export default ()=>{
+  return {
+    componentDidMount() {
+      console.log('Indeterminate')
+    },
+    render() {
+      return <div>Indeterminate</div>
+    },
+  }
+}
+```
+#### 4.HostComponent
+
+原生的html标签
+
 #### reconcileChildren
+
+*不同类型的组件更新最后都会调用此方法*
 
 - 根据props.children生成Fiber子树
 - 判断Fiber对象是否可以复用
