--- a/react/12.React源码学习-beginWork.md
+++ b/react/12.React源码学习-beginWork.md
@@ -8,7 +8,9 @@
 
 下面看看不同组件的更新：
 
-#### 1.FunctionComponent
+出现频率很高的一个判断 `current === null` 用于判断组件是否是第一次渲染。
+
+### 1.FunctionComponent
 
 ```
 function updateFunctionComponent(
@@ -42,7 +44,9 @@ function updateFunctionComponent(
 }
 ```
 调用`Component`时传入了两个值`nextProps`和`context`, 那么函数组件可以直接通过第二个参数拿到`context`，官方文档没有说明过这点。
-#### 2.ClassComponent
+
+### 2.ClassComponent
+
 ```
 function updateClassComponent(
   current: Fiber | null,
@@ -137,7 +141,7 @@ current === null只会出现在第一次渲染的时候，因为会先创建work
 
 最后调用finishClassComponent
 
-#### 3.IndeterminateComponent
+### 3.IndeterminateComponent
 
 FunctionalComponent在含有render方法时会被当做ClassComponent来处理
 
@@ -153,11 +157,11 @@ export default ()=>{
   }
 }
 ```
-#### 4.HostComponent
+### 4.HostComponent
 
 原生的html标签
 
-#### reconcileChildren
+### reconcileChildren
 
 *不同类型的组件更新最后都会调用此方法*
 
