--- a/react/12.React源码学习-beginWork.md
+++ b/react/12.React源码学习-beginWork.md
@@ -159,7 +159,7 @@ export default ()=>{
 ```
 ### 4.HostComponent
 
-原生的html标签
+原生的html标签（completeWork阶段就是从HostComponent开始逆着Fiber输往回return Fiber,并在HostComponent上进行虚拟DOM的diff判断比较props）
 
 ### reconcileChildren
 
