React Hook update

--- a/react/03.Hook.md
+++ b/react/03.Hook.md
@@ -215,3 +215,27 @@ function Counter() {
   );
 }
 ```
+通过阅读React源码 `ReactFiberHooks.js` 发现 `useState` 就是对 `useReducer` 的封装：
+```
+// useState
+export function useState<S>(
+  initialState: (() => S) | S,
+): [S, Dispatch<BasicStateAction<S>>] {
+  return useReducer(
+    basicStateReducer,
+    // useReducer has a special case to support lazy useState initializers
+    (initialState: any),
+  );
+}
+
+// useReducer
+export function useReducer<S, A>(
+  reducer: (S, A) => S,
+  initialState: S,
+  initialAction: A | void | null,
+): [S, Dispatch<A>] {
+  // ...
+  // ...
+  // ...
+}
+``` 
