--- a/js/构造函数和原型.md
+++ b/js/构造函数和原型.md
@@ -68,3 +68,26 @@ Star.prototype = {
 1. 在构造函数中，this指向的是实例对象。
 
 2. 原型对象prototype的函数中，this指向实例对象。
+
+#### 继承
+
+借用父构造函数继承属性,利用原型对象继承方法
+```
+function Father(name, age) {
+  this.name = name;
+  this.age = age;
+}
+function Son(name, age){
+  Father.call(this, name, age);
+}
+Father.prototype.money = funciton() {
+  console.log('money');
+}
+Son.prototype = new Father();
+Son.prototype.constructor = Son;
+Son.prototype.other = function() {
+  console.log('other');
+}
+var son = new Son('姓名', 18);
+console.log(son);
+```
