--- a/react/03.Hook.md
+++ b/react/03.Hook.md
@@ -65,6 +65,14 @@ useEffect在组件内可多次调用，Hook 允许我们按照代码的用途分
 useEffect(() => {
   document.title = `You clicked ${count} times`;
 }, [count]); 
+
+// 仅在组件初次渲染和组件销毁时执行
+useEffect(() => {
+  console.log('1')
+  return () => {
+    console.log('2')
+  }
+}, [])
 ```
 
 ### 示例代码详解 `useState` 与 `useEffect` ：
@@ -158,9 +166,9 @@ function useFriendStatus(friendID) {
       setIsOnline(status.isOnline);
     }
 
-    ChatAPI.subscribeToFriendStatus(friendID, handleStatusChange);
+    XXXAPI.subscribeToFriendStatus(friendID, handleStatusChange);
     return () => {
-      ChatAPI.unsubscribeFromFriendStatus(friendID, handleStatusChange);
+      XXXAPI.unsubscribeFromFriendStatus(friendID, handleStatusChange);
     };
   });
 
@@ -239,3 +247,40 @@ export function useReducer<S, A>(
   // ...
 }
 ``` 
+> ##### useMemo 与 useCallback
+
+可用于给子组件传递参数及回调函数时的优化项
+```
+import React, {useState, useMemo, useCallback} from 'react'
+
+function fnComponent() {
+  const [count, setCount] = useState(0)
+  const [name, setName] = useState('name')
+
+  // 不会在每次fnComponent有更新都重新渲染Child
+  const config = useMemo(()=>{
+    text: `count is ${count}`
+  }, [count])
+  const handleButtonClk = useCallback(()=>{ setCount(c=>c+1) }, [])
+
+  return (
+    <div>
+      <div className='countStyle'>{name}</div>
+      <div className='countStyle'>{count}</div>
+      <input value={name} onChange={(e)=>{setName(e.target.value)}} />
+      <Child config={config} handleButtonClk={handleButtonClk} />
+    </div>
+  )
+}
+
+function Child({config, handleButtonClk}) {
+  console.log('child render')
+  return (
+    <button
+      onClick={handleButtonClk}
+    >
+      {config.text}
+    </button>
+  )
+}
+```
