--- a/react/04.redux.md
+++ b/react/04.redux.md
@@ -2,6 +2,8 @@
 
 > ### 基础
   
+  ![redux工作流](../assets/img/redux.jpg)
+
   #### ***1.数据流:***
   **严格的单向数据流是 Redux 架构的设计核心。**
   **Redux 应用中数据的生命周期遵循下面 4 个步骤：**
