原型描述修正

--- a/js/构造函数和原型.md
+++ b/js/构造函数和原型.md
@@ -2,7 +2,7 @@
 
 #### 构造函数
 
-构造函数通过原型分配的行数是所有对象所`共享的`
+构造函数通过原型分配的函数是所有对象所`共享的`
 
 JS规定，每一个构造函数都有一个 `prototype` 属性，指向另一个对象，注意这个prototype就是一个对象，这个对象的所有属性和方法都会被构造函数所拥有。
 
