--- a/react/04.redux.md
+++ b/react/04.redux.md
@@ -60,7 +60,7 @@
           listener (Function): 每当 dispatch action 的时候都会执行的回调。state 树中的一部分可能已经变化。你可以在回调函数里调用 getState() 来拿到当前 state。store 的 reducer 应该是纯函数，因此你可能需要对 state 树中的引用做深度比较来确定它的值是否有变化。
         - ###### *返回值：*
           (Function): 一个可以解绑变化监听器的函数。
-    - ###### subscribe(listener)
+    - ###### replaceReducer(nextReducer)
         - ###### *作用：*
           替换 store 当前用来计算 state 的 reducer。这是一个高级 API。只有在你需要实现代码分隔，而且需要立即加载一些 reducer 的时候才可能会用到它。在实现 Redux 热加载机制的时候也可能会用到。
         - ###### *参数：*
