--- a/react/04.redux.md
+++ b/react/04.redux.md
@@ -146,6 +146,9 @@ Redux 官方提供的 React 绑定库,具有高效且灵活的特性。此库并
          `[withRef = false]` (Boolean): 如果为 true，connector 会保存一个对被被包含的组件实例的引用，该引用通过 getWrappedInstance() 方法获得。默认值为 false。
 
 
+> ### redux v7.1.0
+  [redux的hooks API](https://react-redux.js.org/api/hooks#using-hooks-in-a-react-redux-app)
+
 > ### 异步Ation
   [redux-saga](https://github.com/TigerHee/shareJS/blob/master/react/05.redux-saga.md)
 
