--- a/react/14.umi2+Antd实现动态主题色切换实践.md
+++ b/react/14.umi2+Antd实现动态主题色切换实践.md
@@ -215,3 +215,7 @@ export const setTheme = themeKey => {
 ```
 
 并在合适的地方调用setTheme(), 完美！！！
+
+[demo项目](https://github.com/TigerHee/umi-switchTheme)
+
+写文章的时候是用的umi2，demo内umi已升级到3
